--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,110 @@
 ---
 ---
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
+@article{Li_IJCAI2023_ProIMP,
+  abbr={IJCAI},
+  title={Incomplete Multi-view Clustering via Prototype-based Imputation},
+  author={Haobin Li* and Yunfan Li* and Mouxing Yang and Peng Hu and Dezhong Peng and Xi Peng},
+  journal={International Joint Conference on Artificial Intelligence},
+  year={2023},
+  publisher={},
+  pdf={},
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
 }
-
-@article{einstein1950meaning,
-  abbr={AJP},
+@article{Li_TNNLS2023_SCDC,
+  abbr={TNNLS},
+  title={Single-Cell RNA-Seq Debiased Clustering via Batch Effect Disentanglement},
+  author={Yunfan Li and Yijie Lin and Peng Hu and Dezhong Peng and Han Luo and Xi Peng},
+  journal={IEEE Transactions on Neural Networks and Learning Systems},
+  year={2023},
+  publisher={IEEE},
+  pdf={},
   bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
 }
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
+@article{Zeng_CVPR2023_FCMI,
+  abbr={CVPR},
+  title={Deep Fair Clustering via Maximizing and Minimizing Mutual Information: Theory, Algorithm and Metric},
+  author={Pengxin Zeng* and Yunfan Li* and Peng Hu and Dezhong Peng and Jiancheng Lv and Xi Peng},
+  journal={IEEE Conference on Computer Vision and Pattern Recognition},
+  volume={},
+  number={},
+  pages={23986--23995},
+  year={2023},
+  code={https://github.com/XLearning-SCU/2023-CVPR-FCMI},
+  pdf={Deep Fair Clustering via Maximizing and Minimizing Mutual Information- Theory, Algorithm and Metric.pdf},
   bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+}
+
+@article{Li_IJCV2022_TCL,
+  abbr={IJCV},
+  title={Twin Contrastive Learning for Online Clustering},
+  author={Yunfan Li and Mouxing Yang and Dezhong Peng and Taihao Li and Jiantao Huang and Xi Peng},
+  journal={International Journal of Computer Vision},
+  volume={130},
+  number={9},
+  pages={2205--2221},
+  year={2022},
+  publisher={Springer},
+  code={https://github.com/Yunfan-Li/Twin-Contrastive-Learning},
+  pdf={Twin Contrastive Learning for Online Clustering.pdf},
+  bibtex_show={true},
+}
+
+@article{Yang_TPAMI2022_SURE,
+  abbr={TPAMI},
+  title={Robust Multi-view Clustering with Incomplete Information},
+  author={Mouxing Yang and Yunfan Li and Peng Hu and Jinfeng Bai and JianCheng Lv and Xi Peng},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume={45},
+  number={1},
+  pages={1055--1069},
+  year={2022},
+  publisher={IEEE},
+  code={https://github.com/XLearning-SCU/2022-TPAMI-SURE},
+  pdf={Robust Multi-view Clustering with Incomplete Information.pdf},
+  bibtex_show={true},
+}
+
+@article{Peng_JMLR2022_TELL,
+  abbr={JMLR},
+  title={XAI Beyond Classification:Interpretable Neural Clustering},
+  author={Xi Peng and Yunfan Li and Ivor Tsang and Joey Tianyi Zhou and Hongyuan Zhu and Jiancheng Lv},
+  journal={Joural of Machine Learning Research},
+  volume={23},
+  number={1},
+  pages={227--254},
+  year={2022},
+  publisher={JMLRORG},
+  code={https://github.com/Yunfan-Li/Interpretable-Neural-Clustering},
+  pdf={XAI Beyond Classification- Interpretable Neural Clustering.pdf},
+  selected={true},
+  bibtex_show={true},
+}
+
+@article{Yang_CVPR2021_MvCLN,
+  abbr={CVPR},
+  title={Partially View-aligned Representation Learning with Noise-robust Contrastive Loss},
+  author={Mouxing Yang and Yunfan Li and Zhenyu Huang and Zitao Liu and Peng Hu and Xi Peng},
+  journal={IEEE Conference on Computer Vision and Pattern Recognition},
+  volume={},
+  number={},
+  pages={1134--1143},
+  year={2021},
+  code={https://github.com/XLearning-SCU/2021-CVPR-MvCLN},
+  pdf={Partially View-aligned Representation Learning with Noise-robust Contrastive Loss.pdf},
+  bibtex_show={true},
+}
+
+@article{Li_AAAI2021_CC,
+  abbr={AAAI},
+  title={Contrastive Clustering},
+  author={Yunfan Li and Peng Hu and Zitao Liu and Dezhong Peng and Joey Tianyi Zhou and Xi Peng},
+  journal={AAAI Conference on Artificial Intelligence},
+  volume={35},
+  number={10},
+  pages={8547--8555},
+  year={2021},
+  code={https://github.com/Yunfan-Li/Contrastive-Clustering},
+  pdf={Contrastive Clustering.pdf},
+  selected={true},
+  bibtex_show={true},
 }
