--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,19 @@
 ---
 ---
+@article{li2023scbridge,
+  abbr={NatComm},
+  title={scBridge embraces cell heterogeneity in single-cell RNA-seq and ATAC-seq data integration},
+  author={Yunfan Li* and Dan Zhang* and Mouxing Yang and Dezhong Peng and Jun Yu and Yu Liu and Jiancheng Lv and Lu Chen and Xi Peng},
+  journal={Nature Communications},
+  volume={14},
+  number={1},
+  pages={6045},
+  year={2023},
+  publisher={Nature Publishing Group UK London},
+  code={https://github.com/XLearning-SCU/scBridge},
+  pdf={scBridge embraces cell heterogeneity in single-cell RNA-seq and ATAC-seq data integration.pdf},
+  bibtex_show={true},
+}
 @article{Li_IJCAI2023_ProIMP,
   abbr={IJCAI},
   title={Incomplete Multi-view Clustering via Prototype-based Imputation},
@@ -7,7 +21,7 @@
   journal={International Joint Conference on Artificial Intelligence},
   year={2023},
   publisher={},
-  pdf={},
+  pdf={Incomplete Multi-view Clustering via Prototype-based Imputation.pdf},
   bibtex_show={true},
 }
 @article{Li_TNNLS2023_SCDC,
@@ -17,7 +31,7 @@
   journal={IEEE Transactions on Neural Networks and Learning Systems},
   year={2023},
   publisher={IEEE},
-  pdf={},
+  pdf={Single-Cell RNA-Seq Debiased Clustering via Batch Effect Disentanglement.pdf},
   bibtex_show={true},
 }
 @article{Zeng_CVPR2023_FCMI,
