--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,7 @@
   publisher={Nature Publishing Group UK London},
   code={https://github.com/XLearning-SCU/scBridge},
   pdf={scBridge embraces cell heterogeneity in single-cell RNA-seq and ATAC-seq data integration.pdf},
+  selected={true},
   bibtex_show={true},
 }
 @article{Li_IJCAI2023_ProIMP,
