--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,48 @@
 ---
 ---
-@article{li2023scbridge,
+@article{Li_ICML2024_TAC,
+  abbr={ICML},
+  title={Image Clustering with External Guidance},
+  author={Yunfan Li and Peng Hu and Dezhong Peng and Jiancheng Lv and Jianping Fan and Xi Peng},
+  journal={International Conference on Machine Learning},
+  year={2024},
+  bibtex_show={true},
+}
+
+@article{tian2024empirical,
+  abbr={ICME},
+  title={An Empirical Study of Parameter Efficient Fine-tuning on Vision-Language Pre-train Model},
+  author={Yuxin Tian and Mouxing Yang and Yunfan Li and Dayiheng Liu and Xingzhang Ren and Xi Peng and Jiancheng Lv},
+  journal={IEEE Conference on Multimedia Expo},
+  year={2024},
+  pdf={An Empirical Study of Parameter Efficient Fine-tuning on Vision-Language Pre-train Model.pdf},
+  bibtex_show={true},
+}
+
+@article{Ma_TIP2024_CREAM,
+  abbr={TIP},
+  title={Cross-modal Retrieval with Noisy Correspondence via Consistency Refining and Mining},
+  author={Xinran Ma* and Mouxing Yang* and Yunfan Li and Peng Hu and Jiancheng Lv and Xi Peng},
+  journal={IEEE Transactions on Image Processing},
+  year={2024},
+  publisher={IEEE},
+  code={https://github.com/XLearning-SCU/2024-TIP-CREAM},
+  pdf={Cross-modal Retrieval with Noisy Correspondence via Consistency Refining and Mining.pdf},
+  bibtex_show={true},
+}
+
+@article{Yang_ICLR2024_READ,
+  abbr={ICLR},
+  title={Test-time adaption against multi-modal reliability bias},
+  author={Mouxing Yang and Yunfan Li and Changqing Zhang and Peng Hu and Xi Peng},
+  journal={International Conference on Learning Representations},
+  year={2024},
+  code={https://github.com/XLearning-SCU/2024-ICLR-READ},
+  pdf={Test-time adaption against multi-modal reliability bias.pdf},
+  bibtex_show={true},
+}
+
+@article{Li_NatComm2023_scBridge,
   abbr={NatComm},
   title={scBridge embraces cell heterogeneity in single-cell RNA-seq and ATAC-seq data integration},
   author={Yunfan Li* and Dan Zhang* and Mouxing Yang and Dezhong Peng and Jun Yu and Yu Liu and Jiancheng Lv and Lu Chen and Xi Peng},
@@ -15,6 +57,7 @@
   selected={true},
   bibtex_show={true},
 }
+
 @article{Li_IJCAI2023_ProIMP,
   abbr={IJCAI},
   title={Incomplete Multi-view Clustering via Prototype-based Imputation},
@@ -25,6 +68,7 @@
   pdf={Incomplete Multi-view Clustering via Prototype-based Imputation.pdf},
   bibtex_show={true},
 }
+
 @article{Li_TNNLS2023_SCDC,
   abbr={TNNLS},
   title={Single-Cell RNA-Seq Debiased Clustering via Batch Effect Disentanglement},
@@ -35,6 +79,7 @@
   pdf={Single-Cell RNA-Seq Debiased Clustering via Batch Effect Disentanglement.pdf},
   bibtex_show={true},
 }
+
 @article{Zeng_CVPR2023_FCMI,
   abbr={CVPR},
   title={Deep Fair Clustering via Maximizing and Minimizing Mutual Information: Theory, Algorithm and Metric},
