--- a/_news/JMLR2021.md
+++ b/_news/JMLR2021.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-One paper was accepted by the Journal of Machine Learning Research [[JMLR]](https://www.jmlr.org/papers/v23/19-497.html){:target="\_blank"}, 2021.
+One paper was accepted by the Journal of Machine Learning Research [[JMLR-21]](https://www.jmlr.org/papers/v23/19-497.html){:target="\_blank"}, 2021.
