--- a/_news/IJCV2022.md
+++ b/_news/IJCV2022.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-One paper was accepted by International Journal of Computer Vision [[IJCV]](https://www.springer.com/journal/11263){:target="\_blank"}, 2022.
+One paper was accepted by International Journal of Computer Vision [[IJCV-22]](https://www.springer.com/journal/11263){:target="\_blank"}, 2022.
