--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,15 +1,47 @@
 ---
 ---
+
+@article{Li_NatComm2025_MetaQ,
+  abbr={NatComm},
+  title={MetaQ: fast, scalable and accurate metacell inference via single-cell quantization},
+  author={Li, Yunfan and Li, Hancong and Lin, Yijie and Zhang, Dan and Peng, Dezhong and Liu, Xiting and Xie, Jie and Hu, Peng and Chen, Lu and Luo, Han and others},
+  journal={Nature Communications},
+  volume={16},
+  number={1},
+  pages={1205},
+  year={2025},
+  publisher={Nature Publishing Group UK London},
+  code={https://github.com/XLearning-SCU/MetaQ},
+  pdf={MetaQ-fast scalable and accurate metacell inference via single-cell quantization.pdf},
+  selected={true},
+  bibtex_show={true},
+}
+@article{Liu_NeurIPS2024_IDC,
+  abbr={NeurIPS},
+  title={Interactive Deep Clustering via Value Mining},
+  author={Honglin Liu and Peng Hu and Changqing Zhang and Yunfan Li# and Xi Peng#},
+  journal={Advances in Neural Information Processing Systems},
+  volume={37},
+  pages={42369--42387},
+  year={2024},
+  code={https://github.com/XLearning-SCU/2024-NeurIPS-IDC},
+  pdf={Interactive Deep Clustering via Value Mining.pdf},
+  bibtex_show={true},
+}
+
 @article{Li_ICML2024_TAC,
   abbr={ICML},
   title={Image Clustering with External Guidance},
   author={Yunfan Li and Peng Hu and Dezhong Peng and Jiancheng Lv and Jianping Fan and Xi Peng},
-  journal={International Conference on Machine Learning},
+  journal={International Conference on Machine Learning (Oral)},
   year={2024},
+  code={https://github.com/XLearning-SCU/2024-ICML-TAC},
+  pdf={Image Clustering with External Guidance.pdf},
+  selected={true},
   bibtex_show={true},
 }
 
-@article{tian2024empirical,
+@article{Tian_ICME2024_Empirical,
   abbr={ICME},
   title={An Empirical Study of Parameter Efficient Fine-tuning on Vision-Language Pre-train Model},
   author={Yuxin Tian and Mouxing Yang and Yunfan Li and Dayiheng Liu and Xingzhang Ren and Xi Peng and Jiancheng Lv},
@@ -136,7 +168,6 @@
   publisher={JMLRORG},
   code={https://github.com/Yunfan-Li/Interpretable-Neural-Clustering},
   pdf={XAI Beyond Classification- Interpretable Neural Clustering.pdf},
-  selected={true},
   bibtex_show={true},
 }
 
