--- a/_news/ICML2024.md
+++ b/_news/ICML2024.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-One paper was accepted by the 41st International Conference on Machine Learning [[ICML-24]](https://icml.cc/Conferences/2024), which will take place on July 21-27, 2024, Messe Wien Exhibition Congress Center, Vienna, Austria.
+One paper was accepted by the 41st International Conference on Machine Learning as Oral [[ICML-24]](https://icml.cc/Conferences/2024), which will take place on July 21-27, 2024, Messe Wien Exhibition Congress Center, Vienna, Austria.
